Fixed font size and alignment

--- a/frontend/WikiContrib-Frontend/src/App.css
+++ b/frontend/WikiContrib-Frontend/src/App.css
@@ -480,7 +480,7 @@ h3.accounts  {
 
 
 .search {
-  width: 80%;
+  width: 90%;
   margin-right: 1.3rem;
 }
 
